Modified ClientModelManager and some messages, minor changes to "toList"